[package]
name = "quicknav"
version = "0.1.0-beta.0"
authors = ["MrDogeBro <MrDogeBro@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrDogeBro/quicknav"
repository = "https://github.com/MrDogeBro/quicknav"
keywords = ["quicknav", "nav", "navigation", "shortcuts", "files"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0"
prettytable-rs = "^0.8"
