[package]
name = "quicknav"
description = "A way to quickly navigate your filesystem from the command line."
version = "1.2.1"
authors = ["MrDogeBro <MrDogeBro@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrDogeBro/quicknav"
repository = "https://github.com/MrDogeBro/quicknav"
keywords = ["quicknav", "nav", "navigation", "shortcuts", "files"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0"
prettytable-rs = "^0.8"
gag = "0.1.10"
regex = "1.5"
lazy_static = "1.4.0"
